fixed layout issues after merge on checkout.html

--- a/menu1.css
+++ b/menu1.css
@@ -217,9 +217,7 @@ width: 35px;
 .cart{
     background-color: bisque;
     justify-content: center;
-<<<<<<< HEAD
     padding-bottom: 20px;
-=======
     width: 1100px;
     display: flex;
     flex-direction: column;
@@ -227,7 +225,6 @@ width: 35px;
     text-align: center;
     
         
->>>>>>> 64dc7455b572e618b56dcf6e6f0da5578e14ce67
 }
 
 .bottom{
@@ -288,7 +285,6 @@ header{
 .quantity{
     display: flex;
 }
-<<<<<<< HEAD
 .checkout {
     display: flex;
     align-items: center;
@@ -316,6 +312,12 @@ header{
     margin: 0;
     padding: 0;
     font-family: 'Lobster Two', cursive;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 1600px;
+    margin: 0 auto;
 }
 .checkout_header{
     display: flex;
@@ -329,6 +331,7 @@ header{
     background-size:25px 25px;
     background-position:0 0, 12.5px 0, 12.5px -12.5px, 0px 12.5px; 
     padding-bottom: 10px;
+    width: 100%;
 }
 .checkout_body{
     background-color: antiquewhite;
@@ -470,7 +473,6 @@ header{
 .footer-bottom p {
     margin: 0;
 }
-=======
 .back-1{
     display: flex;
     justify-content: space-around;
@@ -508,4 +510,3 @@ header{
     justify-content: space-around;
     margin-left: 10px;
 }
->>>>>>> 64dc7455b572e618b56dcf6e6f0da5578e14ce67
